Salesforce/src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Account_DEP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account DEP</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CANDIADATE INFO</label>
        <referenceTo>CANDIDATE_INFO__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DATE_TEXTCAP__c</fullName>
        <formula>IF(
  Start_Date__c &lt; Date(Year(Today()),MONTH(Today()),01),&apos;Process&apos;,
 IF(
 Date(Year(Start_Date__c),MONTH(Start_Date__c),01)&lt;  TODAY()  &amp;&amp; 
  TODAY() &lt;Date(Year(Start_Date__c),MONTH(Start_Date__c),15), &apos;Partial Process&apos;, 



IF( Start_Date__c&lt;=Today()&amp;&amp;ISBLANK(Account_DEP__c), &apos;Allow P&apos;, 
IF(Start_Date__c&lt;=Today()&amp;&amp;Not(IsBLANK( Account_DEP__c )), &apos;P Allow&apos;,&apos;&apos;))

)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DATE TEXTCAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NUMBER__c</fullName>
        <externalId>true</externalId>
        <label>NUMBER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoEmployees__c</fullName>
        <label>NoEmployees</label>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sum_of_salaries__c</fullName>
        <label>Sum of salaries</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VALID_CHECKBOX__c</fullName>
        <formula>IF(Start_Date__c &lt;= TODAY() ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VALID CHECKBOX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>max_salary__c</fullName>
        <label>max salary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>min_salary__c</fullName>
        <label>min salary</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sum_of_salaries_of_employees_del__c</fullName>
        <label>sum of salaries of employees</label>
        <summarizedField>Employee__c.CreatedDate</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_amount_del__c</fullName>
        <label>total amount</label>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_tax__c</fullName>
        <label>total tax</label>
        <summarizedField>Employee__c.Salary__c</summarizedField>
        <summaryForeignKey>Employee__c.Department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>max_salary__c</columns>
        <columns>min_salary__c</columns>
        <columns>NoEmployees__c</columns>
        <columns>Sum_of_salaries__c</columns>
        <columns>total_tax__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>QUEUE1_Department</fullName>
        <filterScope>Queue</filterScope>
        <label>QUEUE1</label>
        <queue>QUEUE1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <recordTypes>
        <fullName>new_record</fullName>
        <active>true</active>
        <description>rtrytuyt</description>
        <label>new record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>